trunk/Archive2/dc/99e778810395ce/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <stdio.h>
   ^
main.cpp: In function 'principales':
main.cpp:5:5: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
     printf ( "Cuerdas: \ n " ) ; 
     ^
main.cpp:5:5: warning: incompatible implicit declaration of built-in function 'printf' [enabled by default]
main.cpp:5:14: warning: unknown escape sequence: '\040' [enabled by default]
     printf ( "Cuerdas: \ n " ) ; 
              ^
main.cpp:6:5: error: unknown type name 'caracteres'
     const  caracteres * s =  "Hello" ; 
     ^
main.cpp:6:30: warning: initialization from incompatible pointer type [enabled by default]
     const  caracteres * s =  "Hello" ; 
                              ^
main.cpp:7:14: warning: unknown escape sequence: '\040' [enabled by default]
     printf ( " \ t ..% 10s \ n \ t ..%-10s \ n \ t %. * s . \ n " , s, s, 10 , s ) ;
              ^
main.cpp:7:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:7:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:7:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:7:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:7:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:7:5: warning: ' ' flag used with '%s' gnu_printf format [-Wformat=]
     printf ( " \ t ..% 10s \ n \ t ..%-10s \ n \ t %. * s . \ n " , s, s, 10 , s ) ;
     ^
main.cpp:7:5: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'const int *' [-Wformat=]
main.cpp:7:5: warning: format '%s' expects argument of type 'char *', but argument 3 has type 'const int *' [-Wformat=]
main.cpp:7:5: warning: unknown conversion type character 0x20 in format [-Wformat=]
main.cpp:7:5: warning: too many arguments for format [-Wformat-extra-args]
main.cpp:9:14: warning: unknown escape sequence: '\040' [enabled by default]
     printf ( "Personajes: \ t % c%% \ n " , 65 ) ;
              ^
main.cpp:9:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:9:5: warning: ' ' flag used with '%c' gnu_printf format [-Wformat=]
     printf ( "Personajes: \ t % c%% \ n " , 65 ) ;
     ^
main.cpp:11:14: warning: unknown escape sequence: '\040' [enabled by default]
     printf ( "Los números enteros \ n " ) ; 
              ^
main.cpp:12:14: warning: unknown escape sequence: '\040' [enabled by default]
     printf ( "Decimal: \ t % i% d% i% i 0,6% 0,0% i + i% u \ n " , 1 , 2 , 3 , 0 , 0 , 4 , - 1 ) ; 
              ^
main.cpp:12:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:12:5: warning: unknown conversion type character ',' in format [-Wformat=]
     printf ( "Decimal: \ t % i% d% i% i 0,6% 0,0% i + i% u \ n " , 1 , 2 , 3 , 0 , 0 , 4 , - 1 ) ; 
     ^
main.cpp:12:5: warning: ' ' flag used with '%u' gnu_printf format [-Wformat=]
main.cpp:12:5: warning: too many arguments for format [-Wformat-extra-args]
main.cpp:13:14: warning: unknown escape sequence: '\040' [enabled by default]
     printf ( "Hexadecimal: \ t % x% x% x% # x \ n " , 5 , 10 , 10 , 6 ) ; 
              ^
main.cpp:13:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:13:5: warning: ' ' flag used with '%x' gnu_printf format [-Wformat=]
     printf ( "Hexadecimal: \ t % x% x% x% # x \ n " , 5 , 10 , 10 , 6 ) ; 
     ^
main.cpp:13:5: warning: ' ' flag used with '%x' gnu_printf format [-Wformat=]
main.cpp:13:5: warning: ' ' flag used with '%x' gnu_printf format [-Wformat=]
main.cpp:13:5: warning: repeated ' ' flag in format [-Wformat=]
main.cpp:13:5: warning: ' ' flag used with '%x' gnu_printf format [-Wformat=]
main.cpp:14:14: warning: unknown escape sequence: '\040' [enabled by default]
     printf ( "octal: \ t % s% # o% # o \ n " , 10 , 10 , 4 ) ;
              ^
main.cpp:14:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:14:5: warning: ' ' flag used with '%s' gnu_printf format [-Wformat=]
     printf ( "octal: \ t % s% # o% # o \ n " , 10 , 10 , 4 ) ;
     ^
main.cpp:14:5: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'int' [-Wformat=]
main.cpp:14:5: warning: repeated ' ' flag in format [-Wformat=]
main.cpp:14:5: warning: ' ' flag used with '%o' gnu_printf format [-Wformat=]
main.cpp:14:5: warning: repeated ' ' flag in format [-Wformat=]
main.cpp:14:5: warning: ' ' flag used with '%o' gnu_printf format [-Wformat=]
main.cpp:16:14: warning: unknown escape sequence: '\040' [enabled by default]
     printf ( "coma flotante \ n " ) ; 
              ^
main.cpp:17:14: warning: unknown escape sequence: '\040' [enabled by default]
     printf ( "Redondeo: \ t % f% .0 f% .32 f \ n " , 1.5 , 1.5 , 1.3 ) ; 
              ^
main.cpp:17:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:17:5: warning: unknown conversion type character 0x20 in format [-Wformat=]
     printf ( "Redondeo: \ t % f% .0 f% .32 f \ n " , 1.5 , 1.5 , 1.3 ) ; 
     ^
main.cpp:17:5: warning: unknown conversion type character 0x20 in format [-Wformat=]
main.cpp:17:5: warning: too many arguments for format [-Wformat-extra-args]
main.cpp:18:14: warning: unknown escape sequence: '\040' [enabled by default]
     printf ( "Relleno: \ t % 05.2f% .2 f% 5.2f \ n " , 1.5 , 1.5 , 1.5 ) ; 
              ^
main.cpp:18:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:18:5: warning: unknown conversion type character 0x20 in format [-Wformat=]
     printf ( "Relleno: \ t % 05.2f% .2 f% 5.2f \ n " , 1.5 , 1.5 , 1.5 ) ; 
     ^
main.cpp:18:5: warning: too many arguments for format [-Wformat-extra-args]
main.cpp:19:14: warning: unknown escape sequence: '\040' [enabled by default]
     printf ( "Científico: \ t % E% e \ n " , 1.5 , 1.5 ) ; 
              ^
main.cpp:19:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:20:14: warning: unknown escape sequence: '\040' [enabled by default]
     printf ( "Hexadecimal: \ t % a% A \ n " , 1.5 , 1,5 ) ; 
              ^
main.cpp:20:14: warning: unknown escape sequence: '\040' [enabled by default]
main.cpp:20:5: warning: format '%A' expects argument of type 'double', but argument 3 has type 'int' [-Wformat=]
     printf ( "Hexadecimal: \ t % a% A \ n " , 1.5 , 1,5 ) ; 
     ^
main.cpp:20:5: warning: too many arguments for format [-Wformat-extra-args]
main.cpp:21:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
